# CONGA

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
code/SASRec.pytorch/: .gitignore
code/notebooks/: kaggle_sasrec_training.ipynb
code/src/: analyze_forgetting.py  benchmark_configs.py  benchmark_runner.py  check_hallucination.py  continuum_memory.py  eval.py  graph_model.py  graph_teacher.py  losses.py  main.py  mine_patterns.py  model.py  pattern_utils.py  preprocess.py  run_benchmark.py  run_cms_experiment.bat  run_tuning.py  sasrec_integration.py  train_graph_enhanced.py  train_graph_pretrain.py  train_sasrec_with_graph.py  train_teacher.py  train_with_kgln.py  train_with_patterns.py  tune_hyperparams.py  utils.py
code/src/modules/mhcv2/: pyproject.toml  setup.py
code/src/modules/mhcv2/src/: binding.cu  kernel.cu
configs/: cl4srec.yaml  conga.yaml  conga_v2.yaml  conga_v2_fixed.yaml  conga_v3.yaml  default.yaml  gcl4sr.yaml  sasrec.yaml
scripts/: benchmark.py  evaluate.py  preprocess.py  train.py
src/: __init__.py  config.py
src/data/: __init__.py  augmentation.py  continual.py  dataset.py  graph_builder.py  lazy_dataset.py
src/layers/: __init__.py  attention.py  contrastive.py  graph.py  memory.py
src/losses/: README.md  __init__.py  bce_loss.py  bpr_loss.py  distillation.py  duo_loss.py  infonce.py  listmle_loss.py  neuralndcg_loss.py
src/models/: __init__.py  base.py  cl4srec.py  conga.py  conga_v2.py  rope.py  (+6 more)
stem/: main.py  model.py  stem_ffn.py
tests/: __init__.py  test_data.py  test_losses.py  test_models.py
(+97 files in other folders)
