[project]
name = "conga"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.37.1",
    "scipy>=1.17.0",
    "torch==2.9.1",
    "torchaudio==2.9.1",
    "torchvision==0.24.1",
    "tqdm<=4.66.5",
    "triton==3.5.1",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu128"

[tool.setuptools.packages.find]
where = ["code/src"]
