[build-system]
requires = ["setuptools>=45", "wheel", "torch>=2.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mhcv2_cuda"
version = "0.1.0"
description = "CUDA extension for MHCv2: fused residual + LayerNorm + Kronecker mix"
requires-python = ">=3.8"
dependencies = ["torch>=2.0.0"]
